--- a/404.md
+++ b/404.md
@@ -3,13 +3,12 @@ layout: page
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 image:
-  feature: texture-feature-01.jpg
-  credit: Texture Lovers
-  creditlink: http://texturelovers.com
+  feature: 404_mars.jpg
+  credit: Nasa/Google Images
 sitemap: false
 ---  
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry! but the page you were trying to view does not exist or it is under construction --- perhaps you can try searching for it below.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
@@ -18,3 +17,5 @@ Sorry, but the page you were trying to view does not exist --- perhaps you can t
 <script type="text/javascript"
   src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
 </script>
+
+Go back to <a href="http://roesinosa.net/">ROESPINOSA.NET</a>
