--- a/404.md
+++ b/404.md
@@ -18,4 +18,4 @@ Sorry! but the page you were trying to view does not exist or it is under constr
   src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
 </script>
 
-Go back to <a href="http://roesinosa.net/">ROESPINOSA.NET</a>
+You back to <a href="http://roesinosa.net/">ROESPINOSA.NET</a> :)
