--- a/404.md
+++ b/404.md
@@ -3,8 +3,8 @@ layout: page
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 image:
-  feature: 404_mars.jpg
-  credit: Nasa/Google Images
+  feature: mars_404.jpg
+  credit: Original by Nasa/Google Images
 sitemap: false
 ---  
 
